--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "babel-runtime": "^6.9.0",
     "dotenv": "^2.0.0",
     "jsonwebtoken": "^5.7.0",
     "jwt-simple": "^0.5.0",
+    "lodash": "^4.12.0",
     "runnable-hermes": "^6.6.0",
     "url-parse": "^1.0.5",
     "ws": "^1.0.1"
